# zfs-gpl

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PROVENANCE.md  README.md  cleanroom.md  contributing.md  notice.md  provenance.md  style-guide.md
.github/: FUNDING.yml
crates/zfsgpl-cli/: Cargo.toml
crates/zfsgpl-cli/src/: main.rs
crates/zfsgpl-core/: Cargo.toml
crates/zfsgpl-core/src/: device.rs  lib.rs  test_support.rs  vdev.rs
crates/zfsgpl-ondisk/: Cargo.toml
crates/zfsgpl-ondisk/src/: checksum.rs  label.rs  lib.rs  nvlist.rs  sha256.rs  uberblock.rs
project/: backlog.md  design.md
project/legal/: patent-fto.md
