[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://github.com/t00mietum/zfs-gpl"
rust-version = "1.90"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

# Pedantic is the standing bar (see project/design.md conventions).
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# size/speed first for release artifacts (see project/design.md)
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
